@@ -17,15 +17,13 @@ public class CategoriaController {
     }
 
     public String cadastrarCategoria(String nomeCategoria, String descricao) {
-        if (buscarCategoria(nomeCategoria).isEmpty()) {
-            Optional<Categoria> categoria = CategoriaFactory.criarCategoria(nomeCategoria, descricao);
-            if (categoria.isPresent()) {
-                listaCategoria.add(categoria.get());
-                return "Categoria cadastrada com sucesso!";
-            }
-            return "Categoria invalida!";
-        }
-        return "Categoria ja existente!";
+        if(buscarCategoria(nomeCategoria).isPresent()) { return "Categoria ja existente!";}
+        if(nomeCategoria.isEmpty()) { return "Campo nome em branco!";}
+        if(descricao.isEmpty()) { return "Campo descricao em branco!";}
+
+        Categoria categoria = CategoriaFactory.criarCategoria(nomeCategoria, descricao);
+        listaCategoria.add(categoria);
+        return "Categoria cadastrada com sucesso!";
     }
 
     public String excluirCategoria(String nomeCategoria) {
@@ -45,11 +43,23 @@ public class CategoriaController {
         return Optional.empty();
     }
 
+    public String alterarCategoria(String nomeCategoria, String novoNome, String descricao) {
+        if(buscarCategoria(nomeCategoria).isEmpty()) {return "Categoria nao encontrada!";}
+        if(novoNome.isEmpty()) { return "Campo nome novo em branco!";}
+        if(descricao.isEmpty()) { return "Campo descricao em branco!";}
+
+        buscarCategoria(nomeCategoria).ifPresent(categoria -> {
+            categoria.setNomeCategoria(novoNome);
+            categoria.setDescricaoCategoria(descricao);
+        });
+        return "Categoria alterada com sucesso!";
+    }
+
     public void ordenarCategoria() {
         Collections.sort(listaCategoria);
     }
 
     public List<String> listarCategorias() {
-        return this.listaCategoria.stream().map(Categoria::getNomeCategoria).collect(Collectors.toList());
+        return this.listaCategoria.stream().map(Categoria::getNomeCategoria).toList();
     }
 }
